@@ -172,7 +172,4 @@ MSG_Usage (//)
   NOBUFFEREDIO   Disable I/O buffers\n\
   MODIFIED       Create catalog only if description/translation have changed\n\
   COPYMSGNEW     Copy ***NEW*** markers over from old translation\n\
-  OLDMSGNEW      Custom marker in old translation\n\
-  NOSPACE        Removes the space being usually put between ';' and the comment\n\
-  NOAUTODATE     Do not use current date in version string. Use from\n\
-                 .ct instead
+  OLDMSGNEW      Custom marker in old translation
