@@ -40,7 +40,5 @@ extern int      Modified;
 extern char     Msg_New[MAX_NEW_STR_LEN];
 extern int      CopyNEWs;
 extern char     Old_Msg_New[MAX_NEW_STR_LEN];
-extern int      NoSpace;
-extern int      NoAutoDate;
 
 #endif  /* FLEXCAT_READPREFS_H */
